--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.2.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.13",
@@ -23,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-use-measure": "^2.1.1",
+    "shiki": "^1.10.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
