--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.13",
+    "geist": "^1.3.1",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
