--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@types/mdx": "^2.0.13",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "framer-motion": "^11.2.13",
     "geist": "^1.3.1",
     "lucide-react": "^0.400.0",
@@ -28,7 +31,8 @@
     "react-use-measure": "^2.1.1",
     "remark-gfm": "^4.0.0",
     "shiki": "^1.10.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
