--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.13",
     "geist": "^1.3.1",
     "lucide-react": "^0.400.0",
+    "motion": "^11.12.0",
     "next": "^14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
