--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "build:registry": "tsx scripts/build.ts"
+    "build:registry": "tsx scripts/registry-build.ts"
   },
   "dependencies": {
     "@code-hike/mdx": "^0.9.0",
