feat: use insiders prettier-plugin-tailwindcss

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.10",
+    "prettier-plugin-tailwindcss": "^0.0.0-insiders.6d3fa07",
     "tailwindcss": "^4.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5"
