--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
+    "glob": "^11.0.1",
     "lucide-react": "^0.400.0",
     "motion": "^11.12.0",
     "next": "^14.2.14",
