feat: update cli, add README

--- a/cli/package.json
+++ b/cli/package.json
@@ -1,17 +1,19 @@
 {
   "name": "motion-primitives",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "CLI to add beautiful, animated components to your app",
   "bin": {
     "motion-primitives": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "tsc -w",
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "commander": "^9.4.1",
-    "ora": "6.3.1",
+    "ora": "^5.4.1",
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
@@ -24,6 +26,14 @@
     "url": "https://github.com/ibelick/motion-primitives.git",
     "directory": "cli"
   },
+  "keywords": [
+    "animation",
+    "components",
+    "motion",
+    "ui",
+    "react",
+    "cli"
+  ],
   "author": "ibelick",
   "license": "MIT"
 }
