--- a/cli/package.json
+++ b/cli/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {
     "commander": "^9.4.1",
-    "ora": "^5.4.1",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "ora": "^5.4.1"
   },
   "devDependencies": {
-    "typescript": "^4.9.5",
     "@types/node": "^18.0.0",
-    "@types/node-fetch": "^2.6.2"
+    "@types/node-fetch": "^2.6.2",
+    "eslint-config-prettier": "^10.0.2",
+    "prettier": "^3.5.3",
+    "typescript": "^4.9.5"
   },
   "repository": {
     "type": "git",
