feat: update pr-registry-build

--- a/.github/workflows/pr-registry-build.yml
+++ b/.github/workflows/pr-registry-build.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -24,11 +27,19 @@ jobs:
       - name: Build registry
         run: npm run build:registry
 
-      - name: Check for changes
+      - name: Configure Git
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+
+      - name: Commit and push changes
         run: |
           if [ -n "$(git status --porcelain)" ]; then
-            echo "Registry build produced changes"
-            git status --porcelain
+            echo "Registry build produced changes, committing..."
+            git add .
+            git commit -m "chore: update registry build artifacts"
+            git push origin HEAD:${{ github.head_ref }}
+            echo "Changes committed and pushed to PR"
           else
             echo "No changes from registry build"
           fi
